<resources>
    <string name="app_name">Boredomo</string>
    <string name="new_random_activity">New Random Activity</string>
    <string name="choose_activity_type">Choose activity type</string>
    <string name="education">Education</string>
    <string name="recreational">Recreational</string>
    <string name="social">Social</string>
    <string name="diy">DIY</string>
    <string name="charity">Charity</string>
    <string name="cooking">Cooking</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">Music</string>
    <string name="busywork">Busywork</string>
    <string name="number_participants">Number of Participants</string>
    <string name="one_digit">1</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="many">Many</string>
    <string name="search">Search</string>
    <string name="description_search_button">Search Button</string>
    <string name="learn_more_at">Learn more at</string>
    <string name="json_parse_failed">JSON parse failed</string>
    <string name="result_error">An error occurred while searching for an activity. Please check your Internet connection!</string>
    <string name="result_empty">No data received!</string>
    <string name="result_no_activity">No activity was found from the server</string>
    <string name="result_unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
</resources>