<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_participants_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_random_activity"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_type_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_activity_type"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_header" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_type_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_type_header">

        <!-- Chips can be declared here, or added dynamically. -->

        <com.google.android.material.chip.Chip
            android:id="@+id/education_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <com.google.android.material.chip.Chip
            android:id="@+id/recreational_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recreational" />

        <com.google.android.material.chip.Chip
            android:id="@+id/social_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social" />

        <com.google.android.material.chip.Chip
            android:id="@+id/diy_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/charity_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charity" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cooking_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooking" />

        <com.google.android.material.chip.Chip
            android:id="@+id/relaxation_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relaxation" />

        <com.google.android.material.chip.Chip
            android:id="@+id/music_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <com.google.android.material.chip.Chip
            android:id="@+id/busywork_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busywork" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/search_participant_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/number_participants"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_type_chipGroup" />

    <TextView
        android:id="@+id/search_participant_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/one_digit"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_participant_header" />

    <com.google.android.material.slider.Slider
        android:id="@+id/search_participant_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_participant_header" />

    <TextView
        android:id="@+id/search_cost_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cost"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_participant_slider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/search_cost_chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_cost_header">

        <com.google.android.material.chip.Chip
            android:id="@+id/free_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cheap_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheap" />

        <com.google.android.material.chip.Chip
            android:id="@+id/expensive_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expensive" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/search_button"
        android:drawableLeft="@drawable/ic_action_search_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:text="@string/search"
        android:contentDescription="@string/description_search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/search_progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>